# WSA

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: robotwin_eval_config.yaml  tbot_sa1_pretrain_data_config.yaml  weight_rules_template.yaml  weight_rules_wsa_large_pretrain.yaml  wsa_base_pretrain_data_config.yaml
evaluation/Libero/: 01_serve_tbot_sa1_libero.sh  01_serve_wsa_base_libero.sh  01_serve_wsa_large_libero.sh  README.md  eval.sh  inference.py  install_libero.sh  libero_remote_client.py  model_server.py  msgpack_numpy.py  websocket_client.py  websocket_server.py
evaluation/Real_Lift2_Example/: 01_serve_tbot_sa1_real_lift2.sh  01_serve_wsa_base_real_lift2.sh  01_serve_wsa_large_real_lift2.sh  02_inference_lift2.sh  README.md  __init__.py  inference.py  inference_wsa_large_sync.sh  main.py  model_server.py  msgpack_numpy.py  remote_client.py  request_builder.py  run_real_lift2_inference.sh  runtime.py  test_remote_server.py  websocket_client.py  websocket_server.py
evaluation/Real_Piper_Example/: 01_serve_tbot_sa1_real_piper_sync.sh  01_serve_wsa_base_real_piper_sync.sh  01_serve_wsa_large_real_piper_sync.sh  02_infer_tbot_sa1_real_piper_sync.sh  02_infer_wsa_base_real_piper_sync.sh  02_infer_wsa_large_real_piper_sync.sh  README.md  inference_piper_sync.py  inference_wsa_large_piper.md  inference_wsa_large_piper.sh  model_server_sync.py
evaluation/RoboTwin/: README.md  eval_config.py  eval_randomized_50.sh  eval_wsa_base.sh  eval_wsa_large.sh  image_tools.py  inference.py  requirements.txt
launch/: README.md  tbot_sa1_finetune.sh  tbot_sa1_finetune_libero.sh  tbot_sa1_finetune_robotwin.sh  tbot_sa1_pretrain.sh  wsa_base_finetune.sh  wsa_base_finetune_libero.sh  wsa_base_finetune_robotwin.sh  wsa_base_pretrain.sh  wsa_large_finetune_libero.sh  wsa_large_finetune_real_lift2.sh  wsa_large_finetune_real_piper.sh  wsa_large_finetune_robotwin.sh  wsa_large_pretrain.sh
launch/supported_methods/: fastwam_finetune.sh  internvla_a1_3b_finetune.sh  pi05_finetune.sh  pi0_finetune.sh  qwenaction_finetune.sh
src/lerobot/configs/: default.py  parser.py  policies.py  train.py
src/lerobot/datasets/: aggregate.py  factory.py  lerobot_dataset.py  sampler.py  streaming_dataset.py  transformed_dataset.py  transforms.py  utils.py  video_utils.py
src/lerobot/optim/: schedulers.py
src/lerobot/policies/: __init__.py  factory.py  names.py  pretrained.py  utils.py
src/lerobot/rl/: wandb_utils.py
src/lerobot/scripts/: README.md  __init__.py  fastwam_precompute_text_embeds.py  fastwam_preprocess_action_dit_backbone.py  lerobot_aggregate.py  lerobot_data_stats.py  lerobot_train.py
src/lerobot/transforms/: constants.py  core.py  utils.py
src/lerobot/utils/: constants.py  (+3 more)
tools/: README.md  check_lerobot_v3_integrity.py  compute_norm_stats_multi.py  compute_norm_stats_single.py  convert_egodex_to_lerobot.py  discover_robotwin_repos.py  precompute_text_embeds.py  preprocess_expert_backbones.py  wsa_large_compute_pretrain_norm_stats.sh
(+136 files in other folders)
